--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 18:05:03 2018</p>
+         Last Run: Sat Nov 17 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>5</td>
                         <td>2</td>
                         <td>20</td>
-                        <td>56</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>14</td>
                         <td>WNW</td>
-                        <td>94</td>
+                        <td>93</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -49,20 +49,20 @@
                         <td>58</td>
                         <td>0</td>
                         <td>14</td>
-                        <td>NW</td>
-                        <td>94</td>
+                        <td>WNW</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Overcast</td>
                         <td>6</td>
                         <td>4</td>
-                        <td>16</td>
+                        <td>17</td>
                         <td>58</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>NW</td>
-                        <td>86</td>
+                        <td>WNW</td>
+                        <td>91</td>
                      </tr>
                   </tbody>
                </table>
@@ -162,7 +162,7 @@
                "data":[
                  "20",
                  "20",
-                 "16"
+                 "17"
                ]
              },
              {
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
+                 "57",
                  "58",
                  "58"
                ]
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "94",
-                 "94",
-                 "86"
+                 "93",
+                 "96",
+                 "91"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 18:05:03 2018</p>
+         Last Run: Sat Nov 17 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,14 +249,26 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>2</td>
-                        <td>66</td>
+                        <td>67</td>
+                        <td>0</td>
+                        <td>11</td>
+                        <td>W</td>
+                        <td>11</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Clear</td>
+                        <td>0</td>
+                        <td>-3</td>
+                        <td>2</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
                         <td>10</td>
                      </tr>
                      <tr>
-                        <td>10:00 PM</td>
+                        <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>0</td>
                         <td>-3</td>
@@ -266,18 +278,6 @@
                         <td>10</td>
                         <td>W</td>
                         <td>9</td>
-                     </tr>
-                     <tr>
-                        <td>11:00 PM</td>
-                        <td>Clear</td>
-                        <td>-1</td>
-                        <td>-4</td>
-                        <td>2</td>
-                        <td>70</td>
-                        <td>0</td>
-                        <td>10</td>
-                        <td>WSW</td>
-                        <td>7</td>
                      </tr>
                   </tbody>
                </table>
@@ -306,7 +306,7 @@
                "data":[
                  "-2",
                  "-3",
-                 "-4"
+                 "-3"
                ]
              },
              {
@@ -318,7 +318,7 @@
                "data":[
                  "1",
                  "0",
-                 "-1"
+                 "0"
                ]
              }
            ]
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "66",
-                 "69",
-                 "70"
+                 "67",
+                 "68",
+                 "69"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "11",
                  "10",
-                 "9",
-                 "7"
+                 "9"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 18:05:03 2018</p>
+         Last Run: Sat Nov 17 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -461,10 +461,10 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Overcast</td>
-                        <td>3</td>
-                        <td>-1</td>
+                        <td>2</td>
+                        <td>-2</td>
                         <td>0</td>
-                        <td>51</td>
+                        <td>52</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
@@ -480,7 +480,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
-                        <td>84</td>
+                        <td>85</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -519,7 +519,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-1",
+                 "-2",
                  "-2",
                  "-3"
                ]
@@ -531,7 +531,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "3",
+                 "2",
                  "2",
                  "1"
                ]
@@ -601,7 +601,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "51",
+                 "52",
                  "53",
                  "55"
                ]
@@ -613,7 +613,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "80",
-                 "84",
+                 "85",
                  "89"
                ]
              }
