--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 23:05:02 2018</p>
+         Last Run: Sun Nov 18 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -33,7 +33,7 @@
                         <td>Overcast</td>
                         <td>5</td>
                         <td>2</td>
-                        <td>20</td>
+                        <td>21</td>
                         <td>61</td>
                         <td>0</td>
                         <td>11</td>
@@ -45,7 +45,7 @@
                         <td>Overcast</td>
                         <td>5</td>
                         <td>2</td>
-                        <td>20</td>
+                        <td>21</td>
                         <td>62</td>
                         <td>0</td>
                         <td>13</td>
@@ -55,14 +55,14 @@
                      <tr>
                         <td>02:00 PM</td>
                         <td>Overcast</td>
-                        <td>6</td>
-                        <td>4</td>
-                        <td>17</td>
-                        <td>61</td>
+                        <td>5</td>
+                        <td>3</td>
+                        <td>16</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NW</td>
-                        <td>92</td>
+                        <td>91</td>
                      </tr>
                   </tbody>
                </table>
@@ -91,7 +91,7 @@
                "data":[
                  "2",
                  "2",
-                 "4"
+                 "3"
                ]
              },
              {
@@ -103,7 +103,7 @@
                "data":[
                  "5",
                  "5",
-                 "6"
+                 "5"
                ]
              }
            ]
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "20",
-                 "20",
-                 "17"
+                 "21",
+                 "21",
+                 "16"
                ]
              },
              {
@@ -173,7 +173,7 @@
                "data":[
                  "61",
                  "62",
-                 "61"
+                 "62"
                ]
              },
              {
@@ -184,7 +184,7 @@
                "data":[
                  "95",
                  "98",
-                 "92"
+                 "91"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 23:05:02 2018</p>
+         Last Run: Sun Nov 18 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -261,7 +261,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>2</td>
-                        <td>71</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
@@ -273,9 +273,9 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>2</td>
-                        <td>73</td>
+                        <td>72</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>W</td>
                         <td>9</td>
                      </tr>
@@ -387,8 +387,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "69",
-                 "71",
-                 "73"
+                 "70",
+                 "72"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 17 23:05:02 2018</p>
+         Last Run: Sun Nov 18 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -460,39 +460,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Overcast</td>
-                        <td>3</td>
-                        <td>-1</td>
+                        <td>Mostly Cloudy</td>
+                        <td>2</td>
+                        <td>-2</td>
                         <td>0</td>
-                        <td>51</td>
+                        <td>52</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
-                        <td>80</td>
+                        <td>77</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>2</td>
                         <td>-2</td>
-                        <td>0</td>
-                        <td>53</td>
+                        <td>1</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
-                        <td>84</td>
+                        <td>81</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>0</td>
-                        <td>55</td>
+                        <td>1</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
-                        <td>88</td>
+                        <td>84</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,7 +519,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-1",
+                 "-2",
                  "-2",
                  "-3"
                ]
@@ -531,7 +531,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "3",
+                 "2",
                  "2",
                  "1"
                ]
@@ -591,8 +591,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "0",
-                 "0"
+                 "1",
+                 "1"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "51",
-                 "53",
-                 "55"
+                 "52",
+                 "54",
+                 "56"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "80",
-                 "84",
-                 "88"
+                 "77",
+                 "81",
+                 "84"
                ]
              }
            ]
