--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 00:05:02 2018</p>
+         Last Run: Sun Nov 18 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -31,13 +31,13 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Overcast</td>
-                        <td>5</td>
-                        <td>2</td>
+                        <td>4</td>
+                        <td>1</td>
                         <td>21</td>
-                        <td>61</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>NW</td>
+                        <td>WNW</td>
                         <td>95</td>
                      </tr>
                      <tr>
@@ -46,10 +46,10 @@
                         <td>5</td>
                         <td>2</td>
                         <td>21</td>
-                        <td>62</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>NW</td>
+                        <td>WNW</td>
                         <td>98</td>
                      </tr>
                      <tr>
@@ -58,10 +58,10 @@
                         <td>5</td>
                         <td>3</td>
                         <td>16</td>
-                        <td>62</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>NW</td>
+                        <td>WNW</td>
                         <td>91</td>
                      </tr>
                   </tbody>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "2",
+                 "1",
                  "2",
                  "3"
                ]
@@ -101,7 +101,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "5",
+                 "4",
                  "5",
                  "5"
                ]
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "61",
                  "62",
-                 "62"
+                 "64",
+                 "63"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 00:05:02 2018</p>
+         Last Run: Sun Nov 18 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -261,7 +261,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>2</td>
-                        <td>70</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
@@ -276,7 +276,7 @@
                         <td>72</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>9</td>
                      </tr>
                   </tbody>
@@ -387,7 +387,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "69",
-                 "70",
+                 "71",
                  "72"
                ]
              },
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 00:05:02 2018</p>
+         Last Run: Sun Nov 18 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -464,11 +464,11 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>0</td>
-                        <td>52</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
-                        <td>77</td>
+                        <td>78</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -476,7 +476,7 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>54</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
@@ -488,9 +488,9 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>56</td>
+                        <td>57</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>SW</td>
                         <td>84</td>
                      </tr>
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "52",
                  "54",
-                 "56"
+                 "55",
+                 "57"
                ]
              },
              {
@@ -612,7 +612,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "77",
+                 "78",
                  "81",
                  "84"
                ]
