--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 01:05:02 2018</p>
+         Last Run: Sun Nov 18 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -33,11 +33,11 @@
                         <td>Overcast</td>
                         <td>4</td>
                         <td>1</td>
-                        <td>21</td>
-                        <td>62</td>
+                        <td>18</td>
+                        <td>61</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>WNW</td>
+                        <td>NW</td>
                         <td>95</td>
                      </tr>
                      <tr>
@@ -45,20 +45,20 @@
                         <td>Overcast</td>
                         <td>5</td>
                         <td>2</td>
-                        <td>21</td>
+                        <td>18</td>
                         <td>64</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WNW</td>
-                        <td>98</td>
+                        <td>97</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Overcast</td>
                         <td>5</td>
                         <td>3</td>
-                        <td>16</td>
-                        <td>63</td>
+                        <td>17</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WNW</td>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "21",
-                 "21",
-                 "16"
+                 "18",
+                 "18",
+                 "17"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "62",
+                 "61",
                  "64",
-                 "63"
+                 "64"
                ]
              },
              {
@@ -183,7 +183,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "95",
-                 "98",
+                 "97",
                  "91"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 01:05:02 2018</p>
+         Last Run: Sun Nov 18 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,11 +249,11 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>2</td>
-                        <td>69</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>13</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -261,11 +261,11 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>2</td>
-                        <td>71</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>11</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -273,11 +273,11 @@
                         <td>-1</td>
                         <td>-4</td>
                         <td>2</td>
-                        <td>72</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WSW</td>
-                        <td>9</td>
+                        <td>W</td>
+                        <td>7</td>
                      </tr>
                   </tbody>
                </table>
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "69",
-                 "71",
-                 "72"
+                 "68",
+                 "70",
+                 "70"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "13",
-                 "11",
-                 "9"
+                 "8",
+                 "7",
+                 "7"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 18 01:05:02 2018</p>
+         Last Run: Sun Nov 18 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 21, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -461,38 +461,38 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>2</td>
-                        <td>-2</td>
+                        <td>3</td>
+                        <td>-1</td>
                         <td>0</td>
-                        <td>54</td>
+                        <td>50</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
-                        <td>78</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>55</td>
+                        <td>52</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SW</td>
-                        <td>81</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-3</td>
                         <td>1</td>
-                        <td>57</td>
+                        <td>53</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>SW</td>
-                        <td>84</td>
+                        <td>54</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,7 +519,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
+                 "-1",
                  "-2",
                  "-3"
                ]
@@ -531,7 +531,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "2",
+                 "3",
                  "2",
                  "1"
                ]
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
-                 "55",
-                 "57"
+                 "50",
+                 "52",
+                 "53"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "78",
-                 "81",
-                 "84"
+                 "65",
+                 "59",
+                 "54"
                ]
              }
            ]
